...
            android:layout_weight="0.8"
            android:contentDescription="@string/boton_para_resetear_los_filtros"
            app:srcCompat="@drawable/ic_action_flecha"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/btnFiltroPrecio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:text="@string/filtrar"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvGasolineras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
