<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FiltrosPermanentes.FiltrosPermanentesView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="71dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFiltroTipoGasolina"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Tipo de gasolina"
                android:textAlignment="center"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_combustible"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvFiltroComunidadAutonoma"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="Comunidad Autónoma"
                android:textAlignment="center"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_CCAA"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ordenar por cercanía"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxSi"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:duplicateParentState="true"
                    android:text="Si"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxNo"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20sp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:duplicateParentState="false"
                    android:text="No"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnResetearPermanentes"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="reseteaPermanentes"
                android:text="Resetear" />

            <Button
                android:id="@+id/btnGuardarPermanentes"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="guardaPermanentes"
                android:text="Guardar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
